corrected errors with spacing and media query

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -152,6 +152,7 @@ h2 {
     background-color: #b1af83;
     grid-column: 1/11;
     grid-row: 4/9;
+    height: 725px;
 }
 
 main.home-grid {
@@ -198,16 +199,19 @@ main.home-grid {
 .rivers-card {
     grid-column: 2/4;
     grid-row: 2/3;
+    margin: 200px 0px;
 }
 
 .camping-card {
     grid-column: 5/7;
     grid-row: 2/3;
+    margin: 200px 0px;
 }
 
 .rapids-card {
     grid-column: 8/10;
     grid-row: 2/3;
+    margin: 200px 0px;
 }
 
 footer {
@@ -232,7 +236,7 @@ footer a:hover {
 
 
 @media screen and (max-width: 900px) {
-    #hero, .home-grid {
+    #hero, main.home-grid {
         display: block;
         height: auto;
     }
